# awpak-tui

./: .gitignore
awpak-ai/: Cargo.toml  README.md
awpak-ai-cmd-client/: Cargo.toml  README.md
awpak-ai-cmd-client/src/: main.rs
awpak-ai/src/: lib.rs
awpak-ai/src/application/graph/: execute_graph.rs  mod.rs  run_graph.rs
awpak-ai/src/domain/: error.rs  mod.rs
awpak-ai/src/domain/agent/: agent.rs  agent_provider.rs  create_agent_provider.rs  execute_agent.rs  mod.rs  run_agent.rs
awpak-ai/src/domain/agent_history_mut/: agent_history_mut.rs  change_agent_history.rs  mod.rs
awpak-ai/src/domain/command/: command.rs  command_input.rs  command_output.rs  execute_command.rs  mod.rs
awpak-ai/src/domain/context_mut/: change_context.rs  context_mut.rs  mod.rs
awpak-ai/src/domain/data/: data.rs  data_compare.rs  data_history.rs  data_insert.rs  data_operations.rs  data_selection.rs  data_utils.rs  mod.rs
awpak-ai/src/domain/graph/: build_graph.rs  build_graph_node.rs  graph.rs  graph_node.rs  mod.rs  node.rs
awpak-ai/src/domain/mcp/: mcp.rs  mcp_functions.rs
awpak-ai/src/domain/parallel/: execute_parallel.rs  mod.rs  parallel.rs
awpak-ai/src/domain/path/: expand_path.rs  mod.rs
awpak-ai/src/domain/signals/: cancel_graph.rs  mod.rs
awpak-ai/src/domain/store/: mod.rs  postgres_store.rs  store.rs  store_from_config.rs  store_query.rs
awpak-ai/src/domain/tracing/: filter_layer.rs  mod.rs
awpak-ai/src/domain/utils/: string_utils.rs
awpak-ai/src/domain/web_client/: execute_web_client.rs  mod.rs  web_client.rs
awpak-ai/src/infrastructure/graph/: build_graph.rs  mod.rs  run_graph.rs
awpak-ai/test_data/graphs/: add_3_graph.json  add_two_numbers_graph.json  append_to_array_graph.json  conecta_4_graph.json  context_mut_graph.json  echo_graph.json  gemini_chat_con_acceso_a_tmp.json  generate_video_subs.json  graph_node_executor_graph.json  iter_graph.json  loop_from_parsed_input_graph.json  loop_graph.json  loop_graph_backup.json  move_history_graph.json  my_ip_graph.json  ollama_chat.json  openai_chat_con_acceso_a_tmp.json  parallel_graph.json  pure_echo_graph.json  return_history_graph.json  simple_web_client_graph.json  sleep_10_graph.json  update_conecta_4_board.json  use_iter_graph.json
awpak-tui/: .gitignore  Cargo.toml
awpak-tui-ai/: Cargo.toml
awpak-tui-ai/src/: lib.rs
awpak-tui-ai/src/application/: mod.rs
awpak-tui-ai/src/application/chain/: chain.rs  chain_client.rs  mod.rs
awpak-tui-ai/src/application/node/: mod.rs  node.rs  node_client.rs
awpak-tui-ai/src/application/repeat/: mod.rs  repeat.rs  repeat_client.rs
awpak-tui-ai/src/domain/: error.rs  mod.rs
awpak-tui-ai/src/domain/agent/: agent.rs
awpak-tui-ai/src/domain/chain/: chain.rs  chain_chain_client.rs  chain_client.rs  chain_functions.rs  mod.rs  node_chain_client.rs  repeat_chain_client.rs
awpak-tui-ai/src/domain/chat/: chat.rs
awpak-tui-ai/src/domain/command/: command.rs  command_functions.rs  mod.rs
awpak-tui-ai/src/domain/data/: data.rs  data_functions.rs  data_utils.rs  mod.rs
awpak-tui-ai/src/domain/io/: io.rs
awpak-tui-ai/src/domain/mcp/: mcp.rs  mcp_client.rs  mcp_functions.rs  mod.rs  tools.rs
awpak-tui-ai/src/domain/node/: anthropic_node_client.rs  deepseek_node_client.rs  gemini_node_client.rs  mod.rs  node.rs  node_client.rs  node_functions.rs  ollama_node_client.rs  openai_node_client.rs
awpak-tui-ai/src/domain/repeat/: mod.rs  repeat.rs  repeat_client.rs  repeat_functions.rs
awpak-tui-ai/src/domain/util/: file_utils.rs
awpak-tui-ai/src/infrastructure/: mod.rs
awpak-tui-ai/src/infrastructure/controllers/: chat_controller.rs
awpak-tui/src/: main.rs
awpak-tui/src/application/: mod.rs
awpak-tui/src/application/app/: change_focus.rs  exec_focus.rs  init_app.rs  mod.rs
awpak-tui/src/application/chat/: chat.rs
awpak-tui/src/application/confirm/: confirm.rs
awpak-tui/src/application/detail/: mod.rs  show_detail.rs
awpak-tui/src/application/field/: field.rs
awpak-tui/src/application/graph/: graph.rs
awpak-tui/src/application/message/: message.rs
awpak-tui/src/application/movible/: movible.rs
awpak-tui/src/application/navigation/: mod.rs  navigate.rs
awpak-tui/src/application/search/: search.rs
awpak-tui/src/application/selectable/: change_selection.rs  mod.rs
awpak-tui/src/application/sortable/: sort.rs
awpak-tui/src/application/source/: init_sources.rs  mod.rs
awpak-tui/src/domain/: error.rs  mod.rs
awpak-tui/src/domain/app/functions/: change_content.rs  mod.rs
awpak-tui/src/domain/app/model/: ai_app.rs  app.rs  graph_app.rs  mod.rs
awpak-tui/src/domain/chat/functions/: chat.rs
awpak-tui/src/domain/content_generator/functions/: generator.rs
awpak-tui/src/domain/content_generator/model/: content_generator.rs  mod.rs
awpak-tui/src/domain/detail/functions/: detail.rs
awpak-tui/src/domain/detail/model/: detail.rs
awpak-tui/src/domain/directory/functions/: directory.rs  expand_dir.rs  mod.rs
awpak-tui/src/domain/directory/model/: directory.rs
awpak-tui/src/domain/graph/: graph.rs  graph_functions.rs  mod.rs
awpak-tui/src/domain/parser/: mod.rs
awpak-tui/src/domain/path/: path_utils.rs
awpak-tui/src/domain/result/: mod.rs  result.rs
awpak-tui/src/domain/table/: mod.rs
awpak-tui/src/domain/util/: date_utils.rs  executable_utils.rs  file_utils.rs  mod.rs  string_utils.rs
awpak-tui/src/infrastructure/: mod.rs
awpak-tui/src/infrastructure/action/: action_channel.rs  mod.rs
awpak-tui/src/infrastructure/channel/: channel.rs
awpak-tui/src/infrastructure/clipboard/: clipboard.rs
awpak-tui/src/infrastructure/controller/: app_controller.rs  async_controller.rs  graph_controller.rs  mod.rs  window_controller.rs
awpak-tui/src/infrastructure/event/: handle_events.rs  mod.rs
awpak-tui/src/infrastructure/ui/: mod.rs
awpak-utils/: Cargo.toml  README.md
awpak-utils/src/: file_utils.rs  lib.rs  string_utils.rs
awpak-utils/src/result/: result.rs
awpak-utils/src/result/functions/: result_utils.rs
awpak-web-client/: Cargo.toml  README.md
awpak-web-client/src/: lib.rs  request.rs  response.rs
(+213 files in other folders)
