[package]
name = "awpak-ai-cmd-client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
awpak-ai = { version = "0.1.0", path = "../awpak-ai" }
text_io = "0.1.13"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19" }
clap = "4.5.41"
