[package]
name = "awpak-ai-cmd-client"
version = "0.2.1"
edition = "2024"
description = "A command-line client for executing AI workflow graphs using the awpak-ai library."
license = "MIT"
readme = "README.md"
repository = "https://github.com/afuentesan/awpak-tui/tree/main/awpak-ai-cmd-client"
keywords = ["ai", "workflow", "graph", "llm"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
# awpak-ai = { version = "0.2.1", path = "../awpak-ai"}
awpak-ai = { version = "0.2.1" }
text_io = "0.1.13"
tracing = "0.1.41"
# tracing-subscriber = { version = "0.3.19", features = [ "env-filter" ] }
tracing-subscriber = { version = "0.3.19" }
clap = "4.5.44"
rustyline = "17.0.0"

[[bin]]
name = "awpak-ai-cmd-client"
path = "src/main.rs"
