[package]
name = "awpak-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.140" }
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
awpak-utils = { version = "0.1.0", path = "../awpak-utils" }
regex = "1.11.1"
async-recursion = "1.1.1"
rig-core = { version = "0.13.0", features = [ "mcp" ] }
mcp-core = "0.1.50"
async-stream = "0.3.6"
