[package]
name = "awpak-ai"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A Rust library to orchestrate AI agents, commands, and URL calls using an execution graph."
readme = "README.md"
repository = "https://github.com/afuentesan/awpak-tui/tree/main/awpak-ai"
homepage = "https://www.awpak.com/"
documentation = "https://docs.rs/awpak-ai"
keywords = ["ai", "agents", "graph", "workflow", "llm"]
categories = ["science"]
authors = ["Ángel Fuente <awpakj@gmail.com>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.141" }
tokio = { version = "1.46.1", features = ["full"] }
tokio-stream = "0.1.17"
awpak-utils = { version = "0.1.0", path = "../awpak-utils" }
awpak-web-client = { version = "0.1.0", path = "../awpak-web-client" }
regex = "1.11.1"
async-recursion = "1.1.1"
rig-core = { version = "0.15.1", features = [ "mcp" ] }
mcp-core = "0.1.50"
async-stream = "0.3.6"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19" }
