[package]
name = "awpak-tui-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
uuid = { version = "1.17.0", features = ["v4"] }
rmcp = { version = "0.1.5", features = ["client", "transport-sse", "transport-child-process", "tower" ] }
rig-core = { version = "0.13.0", features = [ "mcp" ] }
mcp-core = "0.1.50"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.140" }
# futures = "0.3.31"
async-recursion = "1.1.1"
unicode-segmentation = "1.12.0"