[package]
name = "awpak-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
crossterm = "0.29.0"
home = "0.5.11"
is_executable = "1.0.4"
open = "5.3.2"
ratatui = "0.29.0"
regex = "1.11.1"
shellwords = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.141" }
csv = "1.3.1"
unicode-segmentation = "1.12.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
uuid = { version = "1.16.0", features = ["v4"] }
wl-clipboard-rs = "0.9.2"
clipboard-rs = "0.2.4"
awpak-ai = { version = "0.1.0" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19" }

