[package]
name = "awpak-web-client"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Web client for awpak projects."
readme = "README.md"
repository = "https://github.com/afuentesan/awpak-tui/tree/main/awpak-web-client"
homepage = "https://www.awpak.com/"
documentation = "https://docs.rs/awpak-web-client"
keywords = ["web client"]
categories = [ "network-programming" ]
authors = ["Ángel Fuente <awpakj@gmail.com>"]

[dependencies]
reqwest = { version = "0.12.22", features = [ "json" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.141" }